[package]
name = "rode-be-socket"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9.3", features = ["query", "typed-header"] }
chromiumoxide = { version = "0.5.7", features = ["tokio-runtime"], default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
futures = "0.3.30"
futures-util = "0.3.30"
google-drive3 = "5.0.4"
image = "0.25.1"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
once_cell = "1.19.0"
pixelmatch = "0.1.0"
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "chrono", "uuid", "postgres"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tower = { version = "0.4.13", features = ["timeout"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
yrs = "0.18.8"
yrs-warp = "0.8.0"
bcrypt = "0.15.1"

[dev-dependencies]
http-body-util = "0.1.1"
rstest = "0.19.0"
tower = "0.4.13"
